# opencv-record-windows

./: CMakeLists.txt  README.md  bilateral_filter.cpp  opencv_record_output.h  test.cpp
